boardTask style fixed and wrap

--- a/css/board.css
+++ b/css/board.css
@@ -191,10 +191,10 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin-bottom: 100px;
-  overflow: auto;
-  height: calc(100vh - 260px - 80px - 80px);
+  height: calc(100vh - 260px - 0px - 40px);
   padding: 0px 5px 0 5px;
   column-gap: 25px;
+  flex-wrap: wrap;
 }
 
 
@@ -223,11 +223,12 @@ h1 {
 .singleBoards {
   overflow-x: scroll;
   width: 250px;
-  height: 55vh;
+  height: 61vh;
   flex-direction: column;
-  border-radius: 50px;
+  border-radius: 30px;
   row-gap: 35px;
   display: flex;
+  align-items: center;
 }
 
 .dragBackground {
@@ -240,7 +241,7 @@ h1 {
   flex-direction: column;
   max-height: 290px;
   height: fit-content;
-  width: 100%;
+  width: 90%;
   position: relative;
   box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.05);
   border-radius: 30px;
